@@ -1,5 +1,5 @@
 === Opus Primus changelog.txt ===
-Last revised November 9, 2014
+Last revised November 10, 2014
 Please note, the Opus Primus copyright can be found at the end of this file.
 
 == Version 1.3 ==
@@ -28,6 +28,7 @@ Please note, the Opus Primus copyright can be found at the end of this file.
 * Added `clear: both` to `footer`
 * Added `width: auto;` for `th` and `td` elements
 * Added `#header-widgets` to the "Clearance" section of `opus-primus.css`
+* Added minor `attachment` related styles
 * Change default `ul` list-style property to `none inside`
 * Hide the post/page breadcrumbs in mobile displays
 * Hide "Search" button for search form
